# learn_vocab

./: README.md  pyproject.toml
data/: my_pool.json
fra_translations/: __init__.py  main.py  parser.py
tests/: conftest.py  test_main_smoke.py  test_parser.py
