[tool.poetry]
name = "fra_translations"
version = "0.1.0"
description = "Parse English<->French phrase file and build mappings"
authors = ["Auto Generated <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
